--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
 services:
   - type: web
-    name: capstone-api
+    name: CapstoneApi
     env: python
-    buildCommand: ""
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "python app.py"
-    plan: free
